# cpp-chat-app-simulation

./: CMakeLists.txt  main.cpp
src/: Channel.cpp  Channel.hpp  Message.cpp  Message.h  User.cpp  User.hpp
